fix: PermissionGroupResponse request 처럼 수정